--- a/alex_work/01-installation.Rmd
+++ b/alex_work/01-installation.Rmd
@@ -10,7 +10,7 @@ editor_options:
 chunk_output_type: console
 library(knitr)
 knitr::opts_chunk$set(engine.path = list(stata = stataexe), collectcode = TRUE)
----
+
 <!-- Цвета для кусков кода 
 <style>
 pre.r {
@@ -24,7 +24,11 @@ pre.stata {
 
 ```
 
-Перед началом работы установим RStudio, программное обеспечение для программирования на R.
+Перед началом работы сравним особенности установки ПО для работы на R и Python и программы Stata. 
+
+R
+
+Рассмотрим процесс установки RStudio, программного обеспечения для программирования на R.
 
 Инструкция для Windows:
 
@@ -41,3 +45,8 @@ pre.stata {
 ![Webpage.](https://ibb.co/ftnzBMK)
 3. Готово, отныне вы можете использовать RStudio на вашем компьютере c Mac OS.
 
+Существует ряд программ, которые можно использовать для программирования на Python. Рассмотрим установку одной из них, Jupyter Notebook.
+
+Stata
+
+Для установки Stata необходимо загрузить актуальную версию с сайта компании-разработчика:
